<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/id_login"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/id_user_name"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_user_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_login"
        app:layout_constraintVertical_bias="0.468" />

    <TextView
        android:id="@+id/id_age"
        android:layout_width="76dp"
        android:layout_height="49dp"
        android:layout_marginEnd="54dp"
        android:paddingTop="8dp"
        android:text="@string/age"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_age"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_age"
        app:layout_constraintStart_toStartOf="@+id/id_salary" />

    <TextView
        android:id="@+id/id_salary"
        android:layout_width="92dp"
        android:layout_height="43dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="12dp"
        android:paddingTop="8dp"
        android:text="@string/salary"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/id_age"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_salary"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:paddingTop="8dp"
        android:text="Email:"

        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/id_salary"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_email"
        app:layout_constraintStart_toStartOf="@+id/id_user_name" />

    <EditText
        android:id="@+id/edit_text_user_name"
        android:layout_width="212dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_email"
        app:layout_constraintTop_toBottomOf="@+id/id_login"
        app:layout_constraintVertical_bias="0.652" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_salary"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_salary"
        tools:layout_editor_absoluteX="158dp" />

    <EditText
        android:id="@+id/edit_text_salary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_age"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_email" />

    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_home"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_salary"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_salary" />

    <Button
        android:id="@+id/btn_to_home"
        android:layout_width="115dp"
        android:layout_height="63dp"
        android:layout_marginTop="76dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_age"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_age" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="115dp"
        android:layout_height="63dp"
        android:onClick="OnClick_share"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_to_home"
        app:layout_constraintStart_toStartOf="@+id/btn_to_home"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_home"
        app:layout_constraintVertical_bias="0.478" />
</androidx.constraintlayout.widget.ConstraintLayout>